Created a new endpoint that handles the sorting of global sales per consoles/platform after the year 2013 - Tested in Postman and functions as intended