@@ -6,7 +6,9 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.HashMap;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Transactional
 @Service
@@ -30,11 +32,14 @@ public class VideoGameService {
         return videoGame;
     }
 
-    public List<VideoGame> GetPlatformSales() {
-        List<VideoGame> platformSales = videoGameRepository.findAll().stream().filter((v -> v.getPlatform().equals("Wii"))).toList();
+    public HashMap<String, Integer> GetPlatformSales() {
+        List<String> platforms = videoGameRepository.findAll().stream().filter(v -> v.getYear() > 2013).map(w -> w.getPlatform()).distinct().collect(Collectors.toList());
+        HashMap<String, Integer> globalSales = new HashMap<String, Integer>();
+        for(String x: platforms){
+            Integer totalSales = Math.toIntExact(videoGameRepository.findAll().stream().filter(y -> y.getYear() > 2013).filter(z -> z.getPlatform().equals(x)).count());
+            globalSales.put(x, totalSales);
+        }
 
-
-
-        return platformSales;
+        return globalSales;
     }
 }
